# neural_network_from_scratch

./: $  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
deep_learning_lib/: Cargo.toml
mnist/: Cargo.toml  README.md
mnist/src/: augments.rs  benchmark.rs  dataset.rs  lib.rs  mnist_network.rs  network.rs  network_definition.rs  utils.rs
mnist/src/utils/: read_data.rs
nn_lib/: Cargo.toml
nn_lib/src/: activation.rs  activations.rs  cost.rs  initialization.rs  layer.rs  lib.rs  losses.rs  metrics.rs  neural_network.rs  optimizer.rs  sequential.rs
report/: nn_from_scratch.bbl-SAVE-ERROR  nn_from_scratch.tex  references.bib
src/: app.rs  args.rs  main.rs  xor.rs
src/core/: read_data.rs
