workspace = { members = [ "mnist", "nn_lib"] }

[package]
name = "nn_from_scratch"
version = "0.1.0"
edition = "2021"
authors = ["Adrien Pelfresne", "Alexis Vapaille"]

[dependencies]
clap = "4.5.4"
pretty_env_logger = "0.5.0"
nn_lib = {path = "./nn_lib/"}
mnist = {path = "./mnist/"}
anyhow = "1.0.83"
log = "0.4.21"
