[package]
name = "mnist"
version = "0.1.0"
edition = "2021"
authors = ["Adrien Pelfresne", "Alexis Vapaille"]

[dependencies]
byteorder = "1.5.0"
clap = "4.5.4"
flate2 = "1.0.30"
log = "0.4.21"
# ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon", "blas"]}
ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon"]}
# blas-src = { version = "0.8", default-features = false, features = ["accelerate"] }
pretty_env_logger = "0.5.0"
anyhow = "1.0.83"
nn_lib = {path = "../nn_lib/"}
rand = "0.8.5"
