[package]
name = "nn_lib"
version = "0.1.0"
edition = "2021"
authors = ["Adrien Pelfresne", "Alexis Vapaille"]

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon"]}
blas-src = { version = "0.8", default-features = false, features = ["accelerate"] }
ndarray-rand = "0.14.0"
num-traits = "0.2.19"
thiserror = "1.0.60"
rayon = "1.8"
rand = "0.8.5"
